# used_car_price_prediction

./: .env.sample  README.md  pyproject.toml  run.py  run.sh
conf/: config.yaml  settings.py
conf/exp/: exp001_lgbm_baseline.yaml  exp002_lgbm_preprocess.yaml  exp003_lgbm_preprocess_rmse.yaml  exp004_lgbm_preprocess_mae.yaml  exp005_lgbm_preprocess_long_run.yaml  exp006_hparams_search01_exp002.yaml  exp007_hparams_search02_exp002.yaml  exp008_hparams_search03_exp002.yaml  exp009_hparams_search04_exp002.yaml  exp010_hparams_search05_exp002.yaml  exp011_hparams_search06_exp002.yaml  exp012_hparams_search07_exp002.yaml  exp013_hparams_search08_exp002.yaml  exp014_hparams_search09_exp002.yaml  exp015_hparams_search10_exp002.yaml  exp016_hparams_search11_exp002.yaml  exp017_lgbm_preprocess_only_main_features.yaml  exp018_lgbm_baseline2.yaml  exp019_lgbm_exclude_odo.yaml  exp020_lgbm_minmax_scale_obj.yaml
notebook/: create_features.ipynb  go_through_dataset.ipynb
src/: create_dataset.py  logger.py
src/models/: lgbm.py
